Fix for dark mode.

--- a/styles/quiz_style.css
+++ b/styles/quiz_style.css
@@ -127,7 +127,7 @@ main {
 
 .progressNav .progressBar {
   height: 1.25rem;
-  background: rgba(51, 51, 51, 0.05);
+  background: rgba(var(--color-text-rgb), 0.05);
   border-radius: 0.625rem;
   transition: 0.5s;
   flex-grow: 1;
